# SLUG_maker

./: .gitignore  CMakeLists.txt  dependecies  justfile
bismillah/: map.slug
jaaj/: map.slug
maps/Untitled/: map.slug
maps/couille/: map.slug
maps/soos/: map.slug
sleepyjoe/: map.slug
soos/: map.slug
src/: action.c  action.h  defines.c  defines.h  display.c  display.h  geometry.c  geometry.h  main.c  map.c  map.h  menus.c  menus.h
src/styles/: style_genesis.h
